<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.12"
        android:fontFamily="@font/neodex"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        android:fontFamily="@font/neodex"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/app_description_edit"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/etTitle1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/textviewbox"
            android:drawableStart="@drawable/icons8_music_note"
            android:drawableEnd="@drawable/icons8_music_note"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/song_title"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/etYear1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/textviewbox"
            android:drawableEnd="@drawable/calendar_days_svgrepo_com"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/song_year"
            android:inputType="number"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/etSinger1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/textviewbox"
            android:drawableEnd="@drawable/musician_svgrepo_com"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/song_singer"
            android:inputType="text" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.025"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="#EAAA90"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:drawableEnd="@drawable/stars_svgrepo_com"
            android:gravity="center"
            android:text="Stars"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/stars_svgrepo_com" />

        <RadioGroup
            android:id="@+id/rgStars1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="1 Star" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="2 Stars" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="3 Stars" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="4 Stars" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="5 Stars" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/delete" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>