<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.12"
        android:fontFamily="@font/neodex"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black"
        android:textSize="50sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        android:fontFamily="@font/neodex"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/app_description2"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="#F6F6F6"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_to_insert" />
    </LinearLayout>

</LinearLayout>